--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "aws-amplify": "^4.0.0",
     "bootstrap": "^5.0.0",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-notifications": "^1.7.2",
+    "react-notifications-component": "^3.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-simple-image-viewer": "0.0.8",
     "web-vitals": "^1.1.2"
