--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "react-bootstrap-tut",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://5nzpq9iplj.execute-api.us-east-2.amazonaws.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
